test/loop/confidence/errors/func_errors_3.loop
# Errors in pattern matching functions








scan( =>
  []                    : [1: 2, 1: 3]
  [x]       | x < 10    : [x]
  [x:xs]                : scan(xs) + x

main ->
  scan([100, 1])
